--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -9,7 +9,6 @@ section#about-company{
             ".  center-img  center-img  right-side"
             ".  center-img  center-img  . ";
 
-
     .left-side{
         grid-area: left-side;
     }
@@ -24,7 +23,6 @@ section#about-company{
         height: auto;
         object-fit: cover;
         display: block;
-    
     }
 
     .about-red{
@@ -86,11 +84,12 @@ section#about-company{
             
             .rider-image{        
                 img{
-                    min-width: 126px;
-                    min-height: 126px;
+                    max-width: 126px;
+                    max-height: 126px;
                     border: 6px solid #dcdcdc;
                     border-radius: 50%;
                     display: block;
+                    object-fit: cover;
                 }
             }
 
@@ -98,6 +97,7 @@ section#about-company{
                 display: grid;
                 align-self: center;
                 max-width: 300px;
+                width: 100%;
 
                 .rider-content-title{
                     display: grid;
@@ -130,41 +130,89 @@ section#about-company{
             }
         }
     }
+
+    .about-red{
+        grid-column: 1 / span 2;
+        grid-row: 2 / span 2;
+        background: var(--color-primary);
+        z-index: -1;
+    }
+    .about-white{
+        grid-column: 3 / span 2;
+        grid-row: 3/ span 2;
+        background: white;
+        z-index: -1;
+    }
 }
 
 
 
 
+//////////////////////////////////////////////////////////////
+
+@media screen and (max-width: 1168px){
+    
+
+    section#about-company{
+        all: initial;
+        all: unset;
+        margin-top: 2rem;
+        
+        display: grid;
+        
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        // gap: 2rem;
+        // align-items: center;
+        // justify-items: center;
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-// #destinations-wrap{
-//     margin: 0 auto;
-//     width: 100vw;
-//     max-width: 1700px;
-//     height: 805px;
-//     display:grid;
-//     grid-template-columns: minmax(0, 667px) minmax(0,366px) minmax(0,667px);
-//     grid-template-rows: 103px 649px 53px;
-//     grid-template-areas: 
-//             ".  destinations-image  ."
-//             "left-side  destinations-image  right-side"
-//             ".  destinations-image  . ";
+        .left-side{
+            all: initial;
+            all: unset;
+            background: var(--color-primary);
+            color: #fff;
+            padding: 2rem;
+            display: grid;
+            align-items: center;
+            justify-items: center;
+            gap: 1rem;
             
-  
+        }
+        .right-side{
+            all: initial;
+            all: unset;
+            background: #fff;
+            padding: 2rem;
+            display: grid;
+            align-items: center;
+            justify-items: center;
+            gap: 1rem;
+            
+        }
    
-  
-//   }
+
+        // 
+        .about-red{
+            grid-column: none;
+            grid-row: none;
+            display: none;
+            visibility: none;
+           
+        }
+        .about-white{
+            grid-column: none;
+            grid-row: none;
+            display: none;
+            visibility: none;
+           
+        }
+        
+        img.about-image {
+            display: none;
+            visibility: none;
+        }
+    }
+
+}
+
+
